--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,6 @@
 name = "rust_server"
 version = "0.1.0"
 edition = "2021"
-build = "build.rs"
 
 [dependencies]
 axum = "0.7.9"
@@ -15,3 +14,6 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 dotenv = "0.15"
 sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "offline"] }
+
+[env]
+DATABASE_URL = "postgres://postgres:postgres@localhost:5432/rust_server"
